--- a/package.json
+++ b/package.json
@@ -46,5 +46,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://kimts2627.github.io/todo_list/"
+  "homepage": "https://kimts2627.github.io/portfolio/"
 }
